--- a/requirements.txt
+++ b/requirements.txt
@@ -1,7 +1,11 @@
-keras==3.3.3
-keyboard==0.13.5
-librosa==0.10.1
-tensorflow==2.16.1
-tensorflow-estimator==2.15.0
-tensorflow-intel==2.16.1
-tensorflow-io-gcs-filesystem==0.31.0
+flask
+librosa
+numpy>=1.9.2
+scipy>=0.15.1
+scikit-learn>=0.18
+pandas>=0.19
+gunicorn==20.0.4
+Jinja2==2.11.3
+Werkzeug===1.0.1
+MarkupSafe==1.1.1
+tensorflow==2.10.1
